--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,13 @@
             <artifactId>poi-ooxml</artifactId>
             <version>3.12</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.baitian.oa</groupId>
+            <artifactId>oa-baioo-interface</artifactId>
+            <version>1.4-SNAPSHOT</version>
+        </dependency>
+
     </dependencies>
 
     <build>
